- add docker - add circleCi - fixes - add token from env variable

--- a/src/Untappd.KolosBot/Untappd.KolosBot/Untappd.KolosBot.csproj
+++ b/src/Untappd.KolosBot/Untappd.KolosBot/Untappd.KolosBot.csproj
@@ -2,9 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>cb04694b-e5bf-430c-8f9a-60ce46816fcc</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.5" />
     <PackageReference Include="Telegram.Bot" Version="15.2.0" />
   </ItemGroup>
 
