--- a/src/Untappd.KolosBot/Untappd.KolosBot/Dockerfile
+++ b/src/Untappd.KolosBot/Untappd.KolosBot/Dockerfile
@@ -3,11 +3,13 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
+FROM alpine
 CMD ls
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 
+FROM alpine
 CMD ls
 
 COPY ["Untappd.KolosBot/Untappd.KolosBot.csproj", "Untappd.KolosBot/"]
