--- a/src/Untappd.KolosBot/Untappd.KolosBot/Dockerfile
+++ b/src/Untappd.KolosBot/Untappd.KolosBot/Dockerfile
@@ -4,13 +4,13 @@ EXPOSE 80
 EXPOSE 443
 
 FROM alpine
-ENTRYPOINT ls /app
+CMD ls /app
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 
 FROM alpine
-ENTRYPOINT ls /src
+CMD ls /src
 
 COPY ["Untappd.KolosBot/Untappd.KolosBot.csproj", "Untappd.KolosBot/"]
 COPY ["Untappd.KolosBot.Infrastucture/Untappd.KolosBot.Infrastucture.csproj", "Untappd.KolosBot.Infrastucture/"]
