--- a/src/Untappd.KolosBot/Untappd.KolosBot/Dockerfile
+++ b/src/Untappd.KolosBot/Untappd.KolosBot/Dockerfile
@@ -1,16 +1,10 @@
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
-WORKDIR /app
+WORKDIR "/app"
 EXPOSE 80
 EXPOSE 443
 
-FROM alpine
-CMD ls /app
-
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
-WORKDIR /src
-
-FROM alpine
-CMD ls /src
+WORKDIR "/src"
 
 COPY ["Untappd.KolosBot/Untappd.KolosBot.csproj", "Untappd.KolosBot/"]
 COPY ["Untappd.KolosBot.Infrastucture/Untappd.KolosBot.Infrastucture.csproj", "Untappd.KolosBot.Infrastucture/"]
