--- a/src/Untappd.KolosBot/Untappd.KolosBot/Untappd.KolosBot.csproj
+++ b/src/Untappd.KolosBot/Untappd.KolosBot/Untappd.KolosBot.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>cb04694b-e5bf-430c-8f9a-60ce46816fcc</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
