--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
      # build image
      - run: |         
          docker info
-         docker build -t aspnetapp -f src/Untappd.KolosBot/Untappd.KolosBot/Dockerfile .
+         docker-compose up -f src/Untappd.KolosBot
      # deploy the image
      - run: |         
          docker login --username=$HEROKU_USERNAME --password=$HEROKU_API_KEY registry.heroku.com
