--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
      # build image
      - run: |         
          docker info
-         docker-compose -f src/Untappd.KolosBot up
+         docker-compose -f src/Untappd.KolosBot/docker-compose.yml up
      # deploy the image
      - run: |         
          docker login --username=$HEROKU_USERNAME --password=$HEROKU_API_KEY registry.heroku.com
