--- a/src/Untappd.KolosBot/docker-compose.yml
+++ b/src/Untappd.KolosBot/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   untappd.kolosbot:
-    image: ${DOCKER_REGISTRY-}untappdkolosbot
+    image: ${DOCKER_REGISTRY-}untappdkolosbot:aspnetapp
     build:
       context: .
       dockerfile: Untappd.KolosBot/Dockerfile
