--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,8 @@ jobs:
      # build image
      - run: |         
          docker info
-         docker-compose -f src/Untappd.KolosBot/docker-compose.yml -e "BOT_TOKEN=$BOT_TOKEN" up
-         docker stop aspnetapp
+         docker-compose build
+     
      # deploy the image
      - run: |         
          docker login --username=$HEROKU_USERNAME --password=$HEROKU_API_KEY registry.heroku.com
