- deploy through docker build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,18 +4,11 @@ jobs:
    machine: true
    steps:
      - checkout 
-     
-     - run:
-        name: Install Docker Compose
-        command: |
-            curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-            chmod +x ~/docker-compose
-            sudo mv ~/docker-compose /usr/local/bin/docker-compose
-
+         
      # build image
      - run: |         
          docker info
-         docker-compose build
+         docker  build -t aspnetapp "src/Untappd.KolosBot/"
      
      # deploy the image
      - run: |         
