-try set env variable

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,3 +17,4 @@ jobs:
          docker push registry.heroku.com/$HEROKU_APP_NAME/web                
          curl https://cli-assets.heroku.com/install.sh | sh
          heroku container:release web -a $HEROKU_APP_NAME
+         heroku config:set BOT_TOKEN=$BOT_TOKEN
