--- a/src/Untappd.KolosBot/Dockerfile
+++ b/src/Untappd.KolosBot/Dockerfile
@@ -16,4 +16,5 @@ RUN dotnet publish "Untappd.KolosBot.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_URLS http://*:$PORT
 ENTRYPOINT ["dotnet", "Untappd.KolosBot.dll"]
